--- a/webrtc/index.html
+++ b/webrtc/index.html
@@ -22,7 +22,7 @@
     <link rel="author" type="text/html" href="https://plus.google.com/+MuazKhan">
     <meta name="author" content="Muaz Khan">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <link rel="stylesheet" href="https://www.webrtc-experiment.com/style.css">
+    <link rel="stylesheet" href="styles/style.css">
 
     <style>
         audio,
@@ -121,11 +121,11 @@
 
         <div id="participants"></div>
 
-        <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-        <script src="https://www.webrtc-experiment.com/socket.io.js"> </script>
-        <script src="https://www.webrtc-experiment.com/RTCPeerConnection-v1.5.js"> </script>
-        <script src="broadcast.js"> </script>
-        <script src="broadcast-ui.js"> </script>
+        <script src="scripts/adapter-latest.js"></script>
+        <script src="scripts/socket.io.js"> </script>
+        <script src="scripts/RTCPeerConnection-v1.5.js"> </script>
+        <script src="scripts/broadcast.js"> </script>
+        <script src="scripts/broadcast-ui.js"> </script>
     </article>
     <article>
 
@@ -174,7 +174,7 @@
     </footer>
 
     <!-- commits.js is useless for you! -->
-    <script src="https://www.webrtc-experiment.com/commits.js" async> </script>
+    <script src="scripts/commits.js" async> </script>
 </body>
 
 </html>
